--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
               <button
                 type="submit"
                 className="primary"
-                disabled={!gewrformData.productFeatures.feature1}
+                disabled={!formData.productFeatures.feature1}
               >
                 Submit Feedback
               </button>
